--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- 슬라이드 css -->
         <link href="css/swiper.css" rel="stylesheet" type="text/css"><!-- 수정X -->
         <link href="css/slide.css" rel="stylesheet" type="text/css"><!--디자인에 맞게 수정-->
-
+<link href="images/icon.png" rel="icon" type="image/png" sizes="32x32">
 </head>
 <body>
     <!--nav-->
